Integrate Contract library and started completing POST/PUT request