@@ -14,9 +14,14 @@
 	<name>NFTService</name>
 	<description>NFT service for stage</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>16</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>4.9.0</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -36,6 +41,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+		    <groupId>io.nfteam.nftlab</groupId>
+		    <artifactId>nftlab</artifactId>
+		    <version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -47,8 +57,37 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<arguments>--enable-preview</arguments>
+					<jvmArguments>--enable-preview</jvmArguments>
+				</configuration>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+	      <plugins>
+	        <plugin>
+	          <groupId>org.apache.maven.plugins</groupId>
+	          <artifactId>maven-compiler-plugin</artifactId>
+	          <version>3.8.1</version>
+	          <configuration>
+	            <source>16</source>
+	            <target>16</target>
+	            <release>16</release>
+	            <compilerArgs>
+	              <arg>--enable-preview</arg>
+	            </compilerArgs>
+	          </configuration>
+	        </plugin>
+	        <plugin>
+	          <groupId>org.apache.maven.plugins</groupId>
+	          <artifactId>maven-surefire-plugin</artifactId>
+	          <version>3.0.0-M4</version>
+	          <configuration>
+	            <argLine>${surefireArgLine} --enable-preview -Xmx1024m -noverify</argLine>
+	          </configuration>
+	        </plugin>
+	      </plugins>
+    	</pluginManagement>
 	</build>
 
 </project>
